syntax = "proto3";

package task.v1alpha;

message Task {
    string name = 1;
    string fields = 2;
    string due_date = 3;
}

service TaskService {
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {};
  rpc GetTask(GetTaskRequest) returns (Task) {};
  rpc CreateTask(CreateTaskRequest) returns (Task) {};
  rpc UpdateTask(UpdateTaskRequest) returns (Task) {};
  rpc DeleteTask(DeleteTaskRequest) returns (Task) {};
  
  rpc StreamTasks (StreamTasksRequest) returns (stream StreamTasksResponse) {};
}

service UsageService {
  rpc Using (UsageRequest) returns (UsageResponse) {};
  rpc UsingStream (UsageRequest) returns (stream UsageResponse) {};
}

enum EventType {
  EVENT_TYPE_CLICK = 0;
  EVENT_TYPE_CREATE = 1;
  EVENT_TYPE_UPDATE = 2;
  EVENT_TYPE_DELETE = 3;
}

message UsageRequest {
  string username = 1;
  string task_name = 2;
  EventType event_type = 3;
}

message UsageResponse {
  string username = 1;
  string task_name = 2;
  EventType event_type = 3;
}

message StreamTasksRequest {}
message StreamTasksResponse {
  Task task = 1;
  string event_type = 2;
}

message ListTasksRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListTasksResponse {
  // The field name should match the noun "Task" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Task tasks = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetTaskRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateTaskRequest {
  // The parent resource name where the Task is to be created.
  string parent = 1;

  // The Task id to use for this Task.
  string task_id = 2;

  // The Task resource to create.
  // The field name should match the Noun in the method name.
  Task task = 3;
}

message UpdateTaskRequest {
  // The Task resource which replaces the resource on the server.
  Task task = 1;
}

message DeleteTaskRequest {
  // The resource name of the Task to be deleted.
  string name = 1;
}


